// Copyright 2025 Cisco Systems, Inc. and its affiliates
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package data;

message Enum3 {}

message Enum4 {}

message Enum {
}
